@@ -1,3 +1,8 @@
+2020-05-11 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/wchar.c:
+	  Fix bug #2572
+
 2020-05-11 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/tests/wchar.c: fix bug #2572
